# qubit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_types.ts
.changes/: add-eslint-ignore.md  additional-types.md  async-from-context.md  async-to-service.md  axum-0.8.md  better-handler-macro-errors.md  bindings-header.md  bump-js-deps.md  client-build.md  client-method-fn.md  client-refactor.md  cloned-ctx.md  config.json  crate-description.md  derive-enums.md  export-more-collections.md  export-name.md  fix-check-sockets.md  fix-memory-leak.md  fix-nested-routers.md  fix-npm-release-tag.md  fix-readme.md  from-request-extensions.md  get-query.md  get-requests.md  handler-kind-attribute.md  handler-names.md  handler-rename-fix.md  index-barrel-file.md  js-dep-bumps.md  loosen-async-requirement.md  macro-absolute-paths.md  multi-transport.md  on-close.md  overload-subscription.md  parameterless-handlers.md  pass-checks.md  patch-disc-err.md  polyfill-fetch.md  pre.json  (+26 more)
.github/: pull_request_template.md
.github/workflows/: checks.yml  covector-status.yml  covector-version-or-publish.yml  release-plz.yml
bindings/: User.ts  index.ts
client/: bindings.ts  client.ts  index.ts  package-lock.json  package.json  stream.ts
client/jsonrpc/: index.ts
client/proxy/: promise.ts
client/src/: client.ts  index.ts  stream.ts
client/src/proxy/: promise.ts
client/src/transport/: ws.ts
client/transport/: http.ts  index.ts  ws.ts
crates/qubit-macros/: CHANGELOG.md  Cargo.toml
crates/qubit-macros/src/: analyse.rs  codegen.rs  handler.rs  lib.rs  lower.rs  parse.rs
crates/qubit-macros/src/handler/: mod.rs  options.rs
crates/qubit-macros/src/handler2/: analyse.rs  lower.rs  mod.rs  parse.rs
crates/qubit-macros/src/macros/: derive_export_type.rs  derive_type_dependencies.rs  handler.rs  mod.rs  ts.rs
crates/qubit-macros/src/macros/handler/: analyse.rs  codegen.rs  lower.rs  mod.rs
crates/qubit-macros/src/refactor/: analyse.rs  codegen.rs  lower.rs  mod.rs  parse.rs
crates/qubit-macros/tests/ui/: attribute-handler-kind-duplicated.rs  attribute-handler-kind-duplicated.stderr  attribute-handler-kind-missing.rs  attribute-handler-kind-missing.stderr  attribute-handler-kind-multiple.rs  attribute-handler-kind-multiple.stderr  attribute-name-duplicated.rs  attribute-name-duplicated.stderr  attribute-name-multiple.rs  attribute-name-multiple.stderr  attribute-unknown.rs  attribute-unknown.stderr  handler-input-destructuring.rs  handler-input-destructuring.stderr  handler-input-self.rs  handler-input-self.stderr  handler-non-async.rs  handler-non-async.stderr  handler-output-non-subscription-stream.rs  handler-output-non-subscription-stream.stderr  handler-output-subscription-no-output.rs  handler-output-subscription-no-output.stderr  handler-output-subscription-non-stream.rs  handler-output-subscription-non-stream.stderr
docs/: ctx.md
example/: Cargo.toml  bindings.ts  index.ts  package-lock.json  package.json
example/bindings/: Metadata.ts  User.ts  index.ts
example/src/: handler.rs  main.rs
examples/: README.md
examples/authentication/: Cargo.toml  README.md
examples/authentication/auth-demo/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
examples/authentication/auth-demo/src/: bindings.ts  cookie-auth.ts  main.ts  mutable-ctx.ts
examples/authentication/auth-demo/src/bindings/: index.ts
examples/authentication/auth-demo/src/bindings-cookie-auth/: index.ts
examples/authentication/auth-demo/src/bindings-mutable-ctx/: index.ts
examples/authentication/src/: cookie.rs  main.rs  mutable_ctx.rs
examples/chaos/: Cargo.toml  bindings.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/chaos/bindings/: Metadata.ts  MyEnum.ts  NestedStruct.ts  Test.ts  UniqueType.ts  User.ts  index.ts
examples/chaos/src/: main.rs
examples/chat-room-react/: README.md  package-lock.json  package.json  pnpm-lock.yaml
examples/chat-room-react/src/: App.tsx  api.ts  bindings.ts  index.css  main.tsx
examples/chat-room-react/src-rust/: Cargo.toml
examples/chat-room-react/src-rust/src/: main.rs  manager.rs
examples/chat_room_react/: README.md  index.html  package-lock.json  package.json
examples/chat_room_react/src/: App.tsx  bindings.ts  index.css
examples/chat_room_react/src-rust/: Cargo.toml
examples/counter/: Cargo.toml  README.md  bindings.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/counter/bindings/: index.ts
examples/counter/src/: ctx.rs  main.rs
examples/hello-world/: Cargo.toml  README.md  bindings.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/hello-world/bindings/: index.ts
examples/hello-world/src/: main.rs
examples/hello_world/: Cargo.toml  README.md  bindings.ts  index.ts  package-lock.json  package.json
examples/hello_world/src/: main.rs
macros/: Cargo.toml
macros/src/: handler.rs  lib.rs  router.rs
scripts/: generate-lock-files.sh
src/: context.rs  dependencies.rs  erasure.rs  error.rs  graph.rs  handler.rs  header.txt  lib.rs  main.rs  private.rs  router.rs  router2.rs  rpc_builder.rs  sample.rs  server.rs  ts.rs
src/builder/: handler.rs  mod.rs  rpc_builder.rs
src/builder/ty/: dependencies.rs  export_type.rs  mod.rs  registry.rs
src/codegen/: handler.rs  header.txt  mod.rs  prefix_map.rs
src/codegen/backend/: mod.rs  ts.rs  typescript.rs
src/codegen/reflection/: dependent_types.rs  mod.rs  param_visitor.rs
src/codegen/ts/: mod.rs
src/handler/: ctx.rs  erasure.rs  impls.rs  marker.rs  mod.rs  reflection.rs  response.rs  ts.rs
src/reflect/: mod.rs
src/reflection/: handler.rs  mod.rs  ty.rs
src/router/: codegen.rs  mod.rs  rpc.rs
src/router2/: codegen.rs  rpc.rs
src/server/: error.rs  mod.rs  router.rs
src/ts/: mod.rs  router.rs  ts.rs
src/ts/handler/: ctx.rs  mod.rs  reflection.rs  ts.rs
src/util/: graph.rs  mod.rs  node.rs
tests/: e2e.rs  handlers.rs
(+14 files in other folders)
