[workspace]
members = ["./crates/qubit-macros"]
exclude = [
  "./examples/authentication",
  "./examples/chaos",
  "./examples/chat-room-react/src-rust",
  "./examples/counter",
  "./examples/hello-world",
]

[package]
name = "qubit"
version = "0.10.2"
edition = "2021"
authors = ["Tom Anderson <tom@ando.gq>"]
repository = "https://github.com/andogq/qubit"
license = "MIT"
description = "Seamless RPC for Rust & TypeScript"
exclude = ["./client", "./example"]

[dependencies]
axum = "0.7"
futures = "0.3.30"
http = "1.1"
hyper = { version = "1.0", features = ["server"] }
jsonrpsee = { version = "0.23", features = ["server"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
ts-rs = "10.1.0"
qubit-macros = { version = "0.6.4", path = "./crates/qubit-macros" }
trait-variant = "0.1.2"
serde_qs = "0.13.0"
urlencoding = "2.1.3"
