[workspace]
members = ["./crates/qubit-macros"]
exclude = [
  "./examples/authentication",
  "./examples/chaos",
  "./examples/chat-room-react/src-rust",
  "./examples/counter",
  "./examples/hello-world",
]

[package]
name = "qubit"
version = "0.10.3"
edition = "2021"
authors = ["Tom Anderson <tom@ando.gq>"]
repository = "https://github.com/andogq/qubit"
license = "MIT"
description = "Seamless RPC for Rust & TypeScript"
exclude = ["./client", "./example"]

[dependencies]
axum = "0.8"
futures = "0.3.31"
http = "1.3"
hyper = { version = "1.6", features = ["server"] }
jsonrpsee = { version = "0.25", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
ts-rs = "10.1.0"
qubit-macros = { version = "0.6.5", path = "./crates/qubit-macros" }
trait-variant = "0.1.2"
serde_qs = "0.13.0"
urlencoding = "2.1.3"
