[workspace]
members = ["./crates/qubit-macros"]
exclude = [
  "./examples/authentication",
  "./examples/chaos",
  "./examples/chat-room-react/src-rust",
  "./examples/counter",
  "./examples/hello-world",
]

[package]
name = "qubit"
version = "1.0.0-beta.0"
edition = "2024"
authors = ["Tom Anderson <tom@ando.gq>"]
repository = "https://github.com/andogq/qubit"
license = "MIT"
description = "Seamless RPC for Rust & TypeScript"
exclude = ["./client", "./example"]

[dependencies]
axum = "0.8"
futures = "0.3.31"
http = "1.3"
hyper = { version = "1.6", features = ["server"] }
jsonrpsee = { version = "0.25", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
ts-rs = { version = "11.0.1", features = [
  "serde-compat",
], default-features = false }
qubit-macros = { version = "1.0.0-beta.0", path = "./crates/qubit-macros" }
trait-variant = "0.1.2"
serde_qs = "0.13.0"
urlencoding = "2.1.3"
derive_more = { version = "2.0.1", features = ["deref"] }
linkme = "0.3.33"
lazy_static = "1.5.0"
thiserror = "2.0.12"

[features]
ts-format = ["ts-rs/format"]
ts-esm = ["ts-rs/import-esm"]

ts-serde-json = ["ts-rs/serde-json-impl"]
ts-chrono = ["ts-rs/chrono-impl"]
ts-bigdecimal = ["ts-rs/bigdecimal-impl"]
ts-url = ["ts-rs/url-impl"]
ts-uuid = ["ts-rs/uuid-impl"]
ts-bson-uuid = ["ts-rs/bson-uuid-impl"]
ts-bytes = ["ts-rs/bytes-impl"]
ts-indexmap = ["ts-rs/indexmap-impl"]
ts-ordered-float = ["ts-rs/ordered-float-impl"]
ts-heapless = ["ts-rs/heapless-impl"]
ts-semver = ["ts-rs/semver-impl"]
ts-smol-str = ["ts-rs/smol_str-impl"]
ts-tokio = ["ts-rs/tokio-impl"]

[dev-dependencies]
rstest = "0.25.0"
static_assertions = "1.1.0"
