[package]
name = "qubit-macros"
version = "0.6.5"
edition = "2024"
description = "Macros to accompany `qubit`."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
trybuild = "1.0.105"
