[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
qubit = { path = "../../" }

ts-rs = "9.0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.30"

tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
hyper = { version = "1.0", features = ["server"] }

cookie = "0.18"
tower = "0.4.13"
