[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qubit = { path = "../../" }
axum = "0.8"
hyper = { version = "1.6", features = ["server"] }
futures = "0.3.31"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
ts-rs = "10.1.0"
